<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.cadplan</groupId>
  <artifactId>jump-fill-pattern</artifactId>
  <version>2.1.0</version>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <!-- workaround, we need to use em here, so they are avail later during filtering -->
    <version.string>${git.branch}-${git.build.time}-${git.commit.id.abbrev}</version.string>
  </properties>

  <repositories>
    <repository>
      <id>ojrepo</id>
      <name>OpenJUMP Snapshot Repository</name>
      <url>https://ojrepo.soldin.de/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.openjump</groupId>
      <artifactId>OpenJUMP</artifactId>
      <version>2.0-main-SNAPSHOT</version>
      <exclusions>
        <exclusion>
          <groupId>*</groupId>
          <artifactId>junit</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
        <includes>
          <include>com/cadplan/fill_patterns/language/</include>
        </includes>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>pl.project13.maven</groupId>
        <artifactId>git-commit-id-plugin</artifactId>
        <version>4.0.5</version>
        <?m2e execute onConfiguration,onIncremental?>
        <executions>
          <!-- retrieve git revision information from local repo -->
          <execution>
            <id>fetch git properties of current branch</id>
            <goals>
              <goal>revision</goal>
            </goals>
            <phase>validate</phase>
          </execution>
        </executions>
        <configuration>
          <verbose>true</verbose>
          <includeOnlyProperties>
            <includeOnlyProperty>^git.branch$</includeOnlyProperty>
            <includeOnlyProperty>^git.build.(time|version|(number(|.unique)))$</includeOnlyProperty>
            <includeOnlyProperty>^git.commit.(id.(abbrev|full)|message.short)$</includeOnlyProperty>
            <includeOnlyProperty>^git.dirty$</includeOnlyProperty>
          </includeOnlyProperties>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <!-- exclude the FillPatterns/ which is going to be packaged via assembly distro-zip -->
          <excludes>
            <exclude>FillPatterns/</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <appendAssemblyId>false</appendAssemblyId>
        </configuration>
        <executions>
          <execution>
            <id>distro zip</id>
            <phase>package</phase>
            <configuration>
              <descriptors>
                <descriptor>distro-zip.xml</descriptor>
              </descriptors>
              <attach>false</attach>
            </configuration>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>net.nicoulaj.maven.plugins</groupId>
        <artifactId>checksum-maven-plugin</artifactId>
        <version>1.10</version>
        <executions>
          <execution>
            <goals>
              <goal>files</goal>
            </goals>
            <phase>package</phase>
            <configuration>
              <fileSets>
                <fileSet>
                  <directory>${project.build.directory}</directory>
                  <includes>
                    <include>${project.build.finalName}.zip</include>
                  </includes>
                </fileSet>
              </fileSets>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>